# VMC_with_LPTFs

./: .gitignore  README.md  config.json  default_config.json  effective_action.ipynb  evaluation.ipynb  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py  train.py
RNN/RYDBERG/32-B=1024-K=10242x2/: 0\settings.json
RNN/RYDBERG/64-B=1024-K=10242x2/: 0\settings.json  1\settings.json  2\settings.json
RNN/RYDBERG/64-B=1024-K=10242x2/0/: DEBUG.npy  T
RNN/RYDBERG/64-B=1024-K=10242x2/1/: DEBUG.npy  T
RNN/RYDBERG/64-B=1024-K=10242x2/2/: DEBUG.npy  T
docs/: donate.md  gen.py  index.md
evaluation/: cum.ipynb  evaluation.ipynb  julia.ipynb  sampling.py  test.ipynb
scripts/: batch.py  live.py
tvmc/: util.py
tvmc/hamiltonians/: hamiltonian.py  ising.py  rydberg.py
tvmc/models/: Base.py  BaseModel.py  LPTF.py  ModelBuilder.py  PTF.py  RNN.py  training.py
tvmc/utils/: builder.py  cli.py  config.py  cuda_helper.py  helper.py  options.py  plot.py  training.py  view.py
