[project]
name = "vmc-with-lptfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmasher>=1.9.2",
    "filelock==3.12.0",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "jinja2==3.1.2",
    "markupsafe==2.1.2",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numpy==1.24.3",
    "sympy==1.12",
    "torch==2.0.1",
    "tqdm>=4.67.1",
    "typing-extensions==4.6.0",
]
