[project]
name = "vmc-with-lptfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmasher>=1.9.2",
    "filelock==3.12.0",
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "jinja2==3.1.2",
    "markupsafe==2.1.2",
    "mkdocs>=1.6.1",
    "mkdocs-dracula-theme>=1.0.8",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.16",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.0",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numpy==1.24.3",
    "pyqt5>=5.15.11",
    "scipy>=1.15.3",
    "sympy==1.12",
    "torch==2.0.1",
    "tqdm>=4.67.1",
    "typing-extensions==4.6.0",
]
